[Refactor] 对语言系统及其余代码进行重构 (#10)
* clean

* remove RainRenderer

* 修改Manager为单例

* 添加i18n reload功能

* i18n

* add i18n file generator

* 重写wts 删掉屎

* b

* Revert "b"

This reverts commit a28945bc44f5d0998c0c73d5b839eae6c85c94d1.

* Reapply "b"

This reverts commit 4ab1205f3230081143da52a937c244ba8fe2c6db.

* 我没话说这个格式化代码。。

* 修复了一点问题哈

* b

* 补全i18n

---------

Co-authored-by: L3MonKe <hhcrystal2008@gmail.com>